src/objects/Social_Ads_Product__c.object
<CustomObject>
    <fields>
        <fullName>Design_Instructions__c</fullName>
        <label>Design Instructions</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facebook_Page_URL__c</fullName>
        <label>Facebook Page URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Capture_Email__c</fullName>
        <label>Lead Capture Email</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Targeted_Gender__c</fullName>
        <label>Targeted Gender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>